<resources>
    <string name="app_name">Tickit</string>

    <!--Main page-->
    <string name="app_name_b">T I C K I T</string>
    <string name="main_tip">No account yet? Create one</string>

    <!--Signin page-->
    <string name="signin">Sign In</string>
    <string name="ID_hint">Student ID</string>
    <string name="sign_in_password_hint">Password</string>
    <string name="sign_in_login">Login</string>
    <string name="sign_in_tip">No account yet? Create one</string>
    <string name="greetings">Good to see you again !</string>

    <!--Signup page-->
    <string name="signup">Sign Up</string>
    <string name="firstGreeting">Nice to meet you !</string>
    <string name="account_hint">Account</string>
    <string name="password_hint">Password</string>
    <string name="nickname_hint">NickName</string>
    <string name="real_name_hint">realName</string>
    <string name="mobile_hint">Mobile Number</string>
    <string name="reenter_password_hint">Re-enter Password</string>
    <string name="creat_account_hint">Create Account</string>
    <string name="login_hint">Already a member? Login</string>



    <!--sign in/up hint-->
    <string name="name_hint">Name</string>

    <!--Profile-->
    <string name="me_title">个人信息</string>
    <string name="profile_title">个人主页</string>
    <string name="user_name">豆豆</string>
    <string name="me_login_balance">账户余额:</string>
    <string name="me_nologin_not_login">您还没有登录哦</string>
    <string name="me_nologin_login">立即登录</string>
    <string name="me_user_coupons">优惠券</string>
    <string name="me_user_cart">购物车</string>
    <string name="me_user_favorite">收藏</string>
    <string name="me_user_history">最近浏览</string>
    <string name="me_item_favourte">我的收藏</string>
    <string name="me_item_order">我的订单</string>
    <string name="me_item_ticket">我的票券</string>
    <string name="me_item_lottery_order">抽奖单</string>
    <string name="me_item_treasure_order">夺宝单</string>
    <string name="me_item_unpaid_uncomment">未评价</string>
    <string name="me_item_bankcard">我的银行卡</string>
    <string name="me_item_bankcard_go_complete">去完善</string>
    <string name="system_service">系统设置</string>
    <string name="me_item_coupons">抵用券</string>
    <string name="contact_service">联系客服</string>


    <string name="user_item_title_username">用户名</string>
    <string name="user_item_right_modify">修改</string>
    <string name="user_item_title_nickname">昵称</string>
    <string name="user_item_right_edit">编辑</string>
    <string name="user_item_title_bindPhone">绑定手机号</string>
    <string name="user_item_right_unbind">未绑定</string>
    <string name="user_item_title_pay_password">支付密码</string>
    <string name="user_item_right_unset">未设置</string>
    <string name="user_item_title_login_password">登录密码</string>
    <string name="user_item_title_avatar">头像</string>
    <string name="man">男</string>
    <string name="user_item_title_gender">性别</string>
    <string name="user_item_title_birthday">生日</string>
    <string name="user_item_right_select">请选择</string>
    <string name="user_item_title_address">收货地址</string>
    <string name="user_item_title_qr">我的二维码</string>
    <string name="user_exit_login">退出登录</string>
    <string name="user_item_title_member_level">会员等级</string>

    <!--profile detail-->
    <string name="tab_title_home">首页</string>
    <string name="tab_title_around">周边</string>
    <string name="tab_title_me">我的</string>
    <string name="tab_title_more">更多</string>
    <string name="wait_dialog_title">加载中，请稍后...</string>
    <string name="more_item_only_wifi_show_picture">仅在WIFI下显示图片</string>
    <string name="more_item_message_notice">消息提醒</string>
    <string name="more_item_share_settings">分享设置</string>
    <string name="more_item_clear_cache">清除缓存</string>
    <string name="more_item_good_comment">赏个好评</string>
    <string name="more_item_feedback">意见反馈</string>
    <string name="more_item_contact_kefu">联系客服</string>
    <string name="more_item_kefu_number">18186532328</string>
    <string name="more_item_current_version">当前版本 V1.0</string>
    <string name="more_item_check_update">检查更新</string>
    <string name="more_item_about">关于</string>
    <string name="more_item_default_cache_size">0.00KB</string>
    <string name="more_item_kefu_hours">(8:00-22:00)</string>

    <!--system-->
    <string name="system_tool_bar">系统设置</string>

    <!--menu-->
    <string name="take_photo">拍照</string>
    <string name="choose_photo">从手机相册中选择</string>


    <!--shake view buttons-->
    <string name="shake_option_1">show</string>


    <!--home-->
    <string name="ticket_activity">票务新奇日</string>
    <string name="ticket_ad">票务推介</string>
    <string name="home_end"> --- END --- </string>

    <!--category-->
    <string name="category_bar">CATEGORY</string>

    <!--show page-->

    <string name="action_settings">Settings</string>
    <string name="search">搜索</string>
    <!--search and refresh-->
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新...</string>
    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_from_bottom_release_label">松开加载更多</string>
    <string name="loading">正在加载...</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="load_all">已加载全部</string>

    <!--Advertisement View-->
    <string name="seleted_btn">选择票价</string>

    <!--Ticket item-->
    <string name="show">Show:  </string>
    <string name="ticket_title">我的票券</string>
    <string name="time">购买时间:  </string>
    <string name="detail">票券详情</string>
    <string name="ticket_name">Name</string>
    <string name="ticket_price">价格：</string>
    <string name="ticket_price_hint">price</string>
    <string name="ticket_time">截止购票时间：</string>
    <string name="ticket_fetch_time">截止取票时间：</string>

    <!--cart show-->
    <string name="cart_title">购物车</string>




    <!--Admin fragment-->
    <string name="admin_title">管理中心</string>
    <string name="bannerBtn">Banner</string>
    <string name="showBtn">Show</string>

    <string-array name="cate_spinnerarr">
        <item>普通票</item>
        <item>活动票</item>
        <item>票务新奇日</item>

    </string-array>



    <string name="search_hint">Search for order</string>


</resources>
