<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
        android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_ticket_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/main_margin"
        android:layout_marginBottom="@dimen/main_margin"
        android:gravity="center"
        android:text="@string/app_name_b"
        android:textColor="@color/dark"
        android:textSize="@dimen/main_text_size" />

    <Button
        android:id="@+id/signin_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginRight="@dimen/main_margin"
        android:text="@string/signin" />

    <TextView
        android:id="@+id/link_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_margin"
        android:layout_marginBottom="@dimen/main_margin"
        android:gravity="center"
        android:text="@string/main_tip"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/signup_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginRight="@dimen/main_margin"
        android:text="@string/signup" />

</LinearLayout>



