<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:paddingTop="@dimen/sign_padding_top"
        android:paddingLeft="@dimen/main_margin"
        android:paddingRight="@dimen/main_margin">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/signup"
            android:layout_height="@dimen/sign_text_height"
            android:layout_marginBottom="@dimen/main_margin"
            android:textColor="@color/dark"
            android:textSize="@dimen/sign_text_size"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/greetings"
            android:layout_height="@dimen/main_margin"
            android:layout_marginBottom="@dimen/main_margin"
            android:textColor="@color/dark"
            android:layout_gravity="center_horizontal" />

        <!--  Student ID Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_margin"
            android:layout_marginBottom="@dimen/sign_margin">
            <EditText android:id="@+id/input_studentID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/ID_hint" />
        </android.support.design.widget.TextInputLayout>

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_margin"
            android:layout_marginBottom="@dimen/sign_margin">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/sign_in_password_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin"
            android:layout_marginBottom="@dimen/main_margin"
            android:padding="@dimen/sign_btn_margin"
            android:text="@string/sign_in_login"/>

        <TextView android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/sign_in_tip"
            android:gravity="center"
            android:textSize="@dimen/text_size"/>

</LinearLayout>