<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/tool_bar"
        android:background="@color/white">
        <ImageButton
            android:id="@+id/systemBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_back"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:layout_marginLeft="@dimen/tool_back" android:contentDescription="TODO" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/system_tool_bar"
            android:layout_gravity="center"
            android:gravity="fill_vertical"
            android:textSize="@dimen/textSize_20"/>
    </android.support.v7.widget.Toolbar>
    <View
        style="@style/me_horizontal_view_style"
        android:background="@color/green"
        android:layout_height="@dimen/tool_bar_view"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_marginBottom="@dimen/me_item_common_layout_marginTop"
        android:background="@color/app_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_quai_bg"
                android:layout_marginTop="@dimen/me_item_common_layout_marginTop"
                android:orientation="vertical">
                <RelativeLayout
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/more_item_only_wifi_show_picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <CheckBox
                        android:id="@+id/more_btn_wifi_switch"
                        style="@style/more_common_checkBox_style"
                        android:checked="false"
                        android:duplicateParentState="false" />
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <RelativeLayout
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/more_item_message_notice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <CheckBox
                        android:id="@+id/more_btn_notice_switch"
                        style="@style/more_common_checkBox_style"/>
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <!--分享设置隐藏-->
                <RelativeLayout
                    android:id="@+id/more_item_share_layout"
                    style="@style/me_common_item_relativeLayout_style"
                    android:visibility="gone">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/more_item_share_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <ImageView
                        style="@style/me_common_item_arrow_right_imageView_style" android:contentDescription="TODO" />
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <RelativeLayout
                    android:id="@+id/more_item_clear_cache_layout"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/more_item_clear_cache"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/more_item_tv_cacheSize"
                        style="@style/more_common_desc_textView_style"
                        android:text="@string/more_item_default_cache_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/me_item_common_layout_marginTop"
                android:orientation="vertical"
                android:background="@drawable/white_quai_bg">
                <RelativeLayout
                    android:id="@+id/more_item_comment_layout"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/more_item_good_comment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <ImageView
                        style="@style/me_common_item_arrow_right_imageView_style"/>
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/me_item_common_layout_marginTop"
                android:orientation="vertical"
                android:background="@drawable/white_quai_bg">
                <RelativeLayout
                    android:id="@+id/more_item_check_update_layout"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/more_item_check_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/more_item_tv_current_version"
                        style="@style/more_common_desc_textView_style"
                        android:text="@string/more_item_current_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <View
                    style="@style/me_horizontal_view_style"/>
                <RelativeLayout
                    android:id="@+id/more_item_about_layout"
                    style="@style/me_common_item_relativeLayout_style">
                    <TextView
                        style="@style/more_common_item_textView_style"
                        android:text="@string/more_item_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <ImageView
                        style="@style/me_common_item_arrow_right_imageView_style"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>