<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:fresco="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/category_img_height"
        app:cardCornerRadius="@dimen/radius"
        app:cardElevation="@dimen/radius"
        android:layout_marginBottom="@dimen/cardMarginVertical"
        android:layout_marginLeft="@dimen/cardMarginHorizontal"
        android:layout_marginRight="@dimen/cardMarginHorizontal"
        android:layout_marginTop="@dimen/cardMarginVertical"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cardMarginHorizontal">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/ticketImage"
                android:layout_width="@dimen/home_list_icon_width"
                android:layout_height="@dimen/home_list_ioon_height"
                android:scaleType="centerCrop"
                fresco:placeholderImage="@mipmap/default_list_pic"/>


            <TextView
                android:id="@+id/showBtnName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/ticketImage"
                android:layout_marginTop="@dimen/cardMarginVertical"
                android:layout_marginLeft="@dimen/cardMarginVertical"
                android:textSize="@dimen/textSize_16"
                android:hint="@string/ticket_name"/>



            <TextView
                android:id="@+id/expiredTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ticket_time"
                android:layout_toRightOf="@id/ticketImage"
                android:layout_marginTop="@dimen/margin_ticket_name"
                android:layout_marginLeft="@dimen/cardMarginHorizontal"
                />

            <TextView
                android:id="@+id/ticketTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ticket_time"
                android:layout_toRightOf="@id/expiredTime"
                android:layout_marginTop="@dimen/margin_ticket_name"
                android:layout_marginLeft="@dimen/cardMarginHorizontal"
                />


            <TextView
                android:id="@+id/fetchTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ticketTime"
                android:layout_toRightOf="@id/ticketImage"
                android:layout_marginLeft="@dimen/cardMarginHorizontal"
                android:hint="@string/ticket_fetch_time"
                />


            <TextView
                android:id="@+id/tickeFetchTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ticketTime"
                android:layout_toRightOf="@id/fetchTime"
                android:layout_marginLeft="@dimen/cardMarginHorizontal"
                android:hint="@string/ticket_fetch_time"
                />

            <Button
                android:layout_width="@dimen/buy_width"
                android:layout_height="@dimen/buy_height"
                android:id="@+id/buyBtn"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/cardMarginHorizontal"
                android:layout_below="@id/tickeFetchTime"
                android:background="@mipmap/buy_cart"
                android:layout_marginRight="@dimen/cardMarginVertical"/>


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>